--- a/arch/arm64/configs/exynos7885-a30_defconfig
+++ b/arch/arm64/configs/exynos7885-a30_defconfig
@@ -119,7 +119,7 @@ CONFIG_LOG_BUF_SHIFT=20
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_DEVICE is not set
@@ -197,7 +197,7 @@ CONFIG_PERF_USE_VMALLOC=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
-CONFIG_SLUB_DEBUG=y
+# CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -250,7 +250,6 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
-CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -293,7 +292,7 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_SYSV68_PARTITION is not set
 # CONFIG_CMDLINE_PARTITION is not set
 CONFIG_BLOCK_COMPAT=y
-CONFIG_BLOCK_SUPPORT_STLOG=y
+# CONFIG_BLOCK_SUPPORT_STLOG is not set
 
 #
 # IO Schedulers
@@ -3553,7 +3552,7 @@ CONFIG_TYPEC=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
-CONFIG_MMC_SUPPORT_STLOG=y
+# CONFIG_MMC_SUPPORT_STLOG is not set
 # CONFIG_MMC_CMDQ_DEBUG is not set
 # CONFIG_MMC_DATA_LOG is not set
 # CONFIG_MMC_TEST_MODE is not set
@@ -3582,7 +3581,7 @@ CONFIG_MMC_DW_IDMAC=y
 CONFIG_MMC_DW_64BIT_DESC=y
 CONFIG_MMC_DW_PLTFM=y
 CONFIG_MMC_DW_EXYNOS=y
-CONFIG_MMC_DW_DEBUG=y
+# CONFIG_MMC_DW_DEBUG is not set
 CONFIG_MMC_DW_EXYNOS_FMP=y
 CONFIG_MMC_DW_EXYNOS_SMU=y
 # CONFIG_MMC_DW_K3 is not set
@@ -3901,7 +3900,7 @@ CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
 CONFIG_ION_EXYNOS=y
-CONFIG_ION_EXYNOS_STAT_LOG=y
+# CONFIG_ION_EXYNOS_STAT_LOG is not set
 # CONFIG_ION_EXYNOS_OF is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_WIMAX_GDM72XX is not set
@@ -3926,7 +3925,7 @@ CONFIG_SEC_DEBUG_RESET_REASON=y
 CONFIG_SEC_DEBUG_EXTRA_INFO=y
 CONFIG_SEC_DEBUG_HW_PARAM=y
 CONFIG_SEC_DEBUG_AUTO_SUMMARY=y
-CONFIG_SEC_UPLOAD=y
+# CONFIG_SEC_UPLOAD is not set
 CONFIG_SEC_FD_DETECT=y
 CONFIG_SEC_DEBUG_LAST_KMSG=y
 CONFIG_SEC_DEBUG_INIT_LOG=y
@@ -3939,7 +3938,7 @@ CONFIG_SEC_DEBUG_AVOID_UNNECESSARY_TRAP=y
 CONFIG_SEC_PARAM=y
 CONFIG_CM_OFFSET=7340596
 CONFIG_SEC_EVENT_LOG=y
-CONFIG_SEC_BOOTSTAT=y
+# CONFIG_SEC_BOOTSTAT is not set
 CONFIG_ARGOS=y
 # CONFIG_SEC_KWATCHER is not set
 # CONFIG_SEC_MMIOTRACE is not set
@@ -4474,7 +4473,7 @@ CONFIG_EXYNOS_SNAPSHOT_IRQ_EXIT_THRESHOLD=0
 CONFIG_EXYNOS_SNAPSHOT_CLK=y
 CONFIG_EXYNOS_SNAPSHOT_PMU=y
 CONFIG_EXYNOS_SNAPSHOT_FREQ=y
-CONFIG_EXYNOS_SNAPSHOT_DM=y
+# CONFIG_EXYNOS_SNAPSHOT_DM is not set
 CONFIG_EXYNOS_SNAPSHOT_HRTIMER=y
 # CONFIG_EXYNOS_SNAPSHOT_REG is not set
 CONFIG_EXYNOS_SNAPSHOT_REGULATOR=y
@@ -4726,7 +4725,7 @@ CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
 CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_SDFAT_SUPPORT_STLOG=y
-CONFIG_SDFAT_DEBUG=y
+# CONFIG_SDFAT_DEBUG is not set
 # CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
@@ -4894,7 +4893,6 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_PAGE_EXTENSION is not set
 # CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_DEBUG_OBJECTS is not set
-# CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_KMEMLEAK is not set
@@ -4929,7 +4927,7 @@ CONFIG_SCHED_INFO=y
 CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
-CONFIG_TIMER_STATS=y
+# CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_PREEMPT is not set
 
 #
@@ -4982,7 +4980,7 @@ CONFIG_GPU_TRACEPOINTS=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_TRACING=y
 CONFIG_TRACING_SUPPORT=y
-CONFIG_FTRACE=y
+# CONFIG_FTRACE is not set
 # CONFIG_FUNCTION_TRACER is not set
 # CONFIG_PREEMPTIRQ_EVENTS is not set
 # CONFIG_IRQSOFF_TRACER is not set
