dts: Underclock/Overclock big and little cores, amend frequency tables and other tweaks. Signed-off-by: Chatur27 <jasonbright2709@gmail.com>

--- a/arch/arm64/boot/dts/exynos/dtbo/exynos7904-a30_common.dtsi
+++ b/arch/arm64/boot/dts/exynos/dtbo/exynos7904-a30_common.dtsi
@@ -797,18 +797,56 @@
 				spur-trfon-freq = <1536>;
 			};
 			cpufreq {
-				domain@1 {
-					max-freq = <1768000>;
+				cpufreq_domain0: domain@0 {
+					min-freq = <208000>;
+					max-freq = <1690000>;
+
+					pm_qos-booting = <1482000>;
 
 					dm-constraints {
 						mif-perf {
-							table = < 1768000 1794000
-								  1664000 1539000
+							table = < 1690000 2093000
+								  1586000 2093000
+						         	  1482000 2002000
+								  1352000 1794000
+						        	  1248000 1794000
+						        	  1144000 1539000
+						        	  1014000 1352000
+						        	   839000 1014000
+						        	   757000  845000
+						        	   676000  676000
+						        	   449000  546000
+						    	           343000  420000
+						          	   208000  420000 >;
+						 };
+					};
+				};
+				cpufreq_domain1: domain@1 {
+					min-freq = <312000>;
+					max-freq = <2288000>;
+					policy-max = <1872000>;
+
+					pm_qos-booting = <1768000>;
+
+					user-default-qos = <936000>;
+
+					dm-constraints {
+						mif-perf {
+							table = < 2288000 2093000
+								  2184000 2093000
+								  2080000 2093000
+          							  1976000 2002000
+          							  1872000 2002000
+          							  1768000 1794000
+          							  1664000 1794000
 								  1560000 1539000
 								  1352000 1352000
+								  1248000 1352000
 								  1144000 1014000
-								   936000  546000
-								   728000  420000>;
+								   936000 1014000
+								   728000  845000
+								   520000  546000
+								   312000  420000 >;
 						};
 					};
 				};
@@ -828,8 +866,37 @@
 					shared-cpus = "0-5";
 
 					user-default-qos = <839000>;
-				};
 
+					min-limit {
+						ctrl-type = <PM_QOS_MIN_LIMIT>;
+						execution-mode = <AARCH64_MODE>;
+							/* big	    lit */
+						table = <
+							 312000 208000
+							  >;
+						};
+
+					max-limit {
+						ctrl-type = <PM_QOS_MAX_LIMIT>;
+						execution-mode = <AARCH64_MODE>;
+							/* big	    lit */
+						table = < 2288000 1690000
+							  2184000 1690000
+							  2080000 1690000
+          						  1976000 1586000
+          						  1872000 1482000
+          						  1768000 1352000
+          						  1664000 1248000
+          						  1560000 1114000
+          						  1352000 1014000
+          						  1248000  839000
+          						  1144000  757000
+          						   936000  676000
+          				 		   728000  449000
+          				 		   520000  343000 >;
+						};
+					};
+					
 				domain@1 {
 					device_type = "cpufreq-userctrl";
 					shared-cpus = "6-7";
@@ -840,26 +907,29 @@
 						ctrl-type = <PM_QOS_MIN_LIMIT>;
 						execution-mode = <AARCH64_MODE>;
 							/* big	    lit */
-						table = < 1768000  1586000
-							  1664000  839000
-							  1560000  839000
-							  1352000  839000
-							  1144000  839000
-							   936000  839000
-							   728000  839000 >;
+						table = < 
+          				 		 312000  208000 
+          				 		  >;
 					};
 
 					max-limit {
 						ctrl-type = <PM_QOS_MAX_LIMIT>;
 						execution-mode = <AARCH64_MODE>;
 							/* big	    lit */
-						table = < 1768000 1586000
-							  1664000 1586000
-							  1560000 1586000
-							  1352000 1586000
-							  1144000 1352000
-							   936000 1248000
-							   728000 1248000 >;
+						table = < 2288000 1690000
+							  2184000 1690000
+							  2080000 1690000
+          						  1976000 1586000
+          						  1872000 1482000
+          						  1768000 1352000
+          						  1664000 1248000
+          						  1560000 1114000
+          						  1352000 1014000
+          						  1248000  839000
+          						  1144000  757000
+          						   936000  676000
+          				 		   728000  449000
+          				 		   520000  343000 >;
 					};
 				};
 			};
